--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,4 +1,7 @@
 @use './header';
-
 @use './banner';
-@use './quality'
+@use './quality';
+@use './galery';
+@use './team';
+@use './customers';
+@use './footer'
