--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -2,6 +2,7 @@ $color_background_white:#E5E5E5;
 $color_background_backdrop:rgba(0, 0, 0, 0.4);
 $color_background_label:rgba(47, 48, 58, 0.8);
 $color_background_banner:#2F303A;
+$color_background-icon:rgba(255, 255, 255, 0.1);
 $color_background_emergent:rgba(33, 150, 243, 0.9);
 $color_background_banneroverlay:#2f303a52;
 $color_background-buttom:#F5F4FA;
